hphp/hack/test/typecheck/inout/bad_inout_use_lvalue1.php
<?hh // strict

function f(inout int $i): void {}

function test(): void {
  f(inout 42);
}
